dist/LineScript-win64-20260615/tests/cases/compile_fail/spawn_non_void.lsc
worker() -> i64 do
  return 1
end

main() -> i64 do
  declare t = spawn(worker())
  await(t)
  return 0
end
